Basic shared memory ring buffer